--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # .env 파일
 
 # 포맷: postgresql+psycopg2://[USER]:[PASSWORD]@[HOST]:[PORT]/[DB_NAME]
-DATABASE_URL="postgresql+psycopg2://postgres:gkfka9116%21@localhost:5432/Codyssey_Team_A"
+DATABASE_URL="postgresql+asyncpg://postgres:gkfka9116%21@localhost:5432/Codyssey_Team_A"
 
 # Redis 연결 정보
 REDIS_HOST=localhost
