--- a/alembic.ini
+++ b/alembic.ini
@@ -1,4 +1,4 @@
-# A generic, single database configuration.
+# ... (다른 설정들)
 
 [alembic]
 # path to migration scripts.
@@ -84,7 +84,8 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+psycopg2://postgres:gkfka9116%%21@localhost:5432/Codyssey_Team_A
+# [수정됨] 비동기 드라이버(asyncpg)와 일관된 DB 이름(ev_charger_db) 사용
+sqlalchemy.url = postgresql+asyncpg://postgres:postgres@localhost:5432/ev_charger_db
 #driver://user:pass@localhost/dbname
 
 [post_write_hooks]
