--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ alembic = "^1.16.5"
 
 redis = "^6.4.0"
 shapely = "^2.0.4"
+requests = "^2.32.5"
+
+[tool.poetry.scripts]
+migrate = "scripts.migrate:main"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
