distinguish MainServer(FastAPI+RedisCache) vs DB(postgre + postgreGIS)

--- a/alembic.ini
+++ b/alembic.ini
@@ -85,7 +85,7 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 # [수정됨] 비동기 드라이버(asyncpg)와 일관된 DB 이름(ev_charger_db) 사용
-sqlalchemy.url = postgresql+asyncpg://postgres:postgres@localhost:5432/ev_charger_db
+sqlalchemy.url = env:DATABASE_URL
 #driver://user:pass@localhost/dbname
 
 [post_write_hooks]
