update redis and fastapi

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 DATABASE_URL="postgresql+asyncpg://postgres:gkfka9116%21@host.docker.internal:5432/Codyssey_Team_A"
 
 # Redis 연결 정보
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 # REDIS_PASSWORD=YOUR_PASSWORD (비밀번호가 있다면)
