--- a/.env
+++ b/.env
@@ -1,9 +1,27 @@
-# .env 파일
+# --------------------------
+# 공통 환경 변수
+# --------------------------
+PROJECT_NAME=EV Charger Management API
+API_VERSION=1.0.0
 
-# 포맷: postgresql+psycopg2://[USER]:[PASSWORD]@[HOST]:[PORT]/[DB_NAME]
-DATABASE_URL="postgresql+asyncpg://postgres:gkfka9116%21@host.docker.internal:5432/Codyssey_Team_A"
+# --------------------------
+# PostgreSQL 설정 (로컬용)
+# --------------------------
+DATABASE_USER=postgres
+DATABASE_PASSWORD=gkfka9116!
+DATABASE_HOST=localhost        # 로컬에서는 localhost
+DATABASE_PORT=5432
+DATABASE_NAME=Codyssey_Team_A
 
-# Redis 연결 정보
-REDIS_HOST=redis
+# --------------------------
+# Redis 설정 (로컬용)
+# --------------------------
+REDIS_HOST=localhost           # 로컬에서는 localhost
 REDIS_PORT=6379
-# REDIS_PASSWORD=YOUR_PASSWORD (비밀번호가 있다면)
+# REDIS_PASSWORD=              # 필요 시 주석 해제
+CACHE_EXPIRE_SECONDS=300
+
+# --------------------------
+# Docker 환경 표시
+# --------------------------
+DOCKER_ENV=false               # Docker에서 실행 시 true로 주입
