--- a/.env
+++ b/.env
@@ -9,19 +9,19 @@ API_VERSION=1.0.0
 # --------------------------
 DATABASE_USER=postgres
 DATABASE_PASSWORD=gkfka9116!
-DATABASE_HOST=localhost        # 로컬에서는 localhost
+DATABASE_HOST=host.docker.internal  # 로컬 Postgres 접근
 DATABASE_PORT=5432
 DATABASE_NAME=Codyssey_Team_A
 
 # --------------------------
-# Redis 설정 (로컬용)
+# Redis 설정
 # --------------------------
-REDIS_HOST=localhost           # 로컬에서는 localhost
+REDIS_HOST=redis          # Docker 내 컨테이너 네트워크 이름
 REDIS_PORT=6379
-# REDIS_PASSWORD=              # 필요 시 주석 해제
+# REDIS_PASSWORD=          # 필요 시 주석 해제
 CACHE_EXPIRE_SECONDS=300
 
 # --------------------------
 # Docker 환경 표시
 # --------------------------
-DOCKER_ENV=false               # Docker에서 실행 시 true로 주입
+DOCKER_ENV=true           # Docker에서 실행 시 true
