--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   # -----------------------------------------------------
-  # 1. Redis Cache Service (Docker에서 관리)
+  # 1. Redis Cache Service
   # -----------------------------------------------------
   redis:
     image: redis:7-alpine
@@ -19,40 +19,64 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
+    networks:
+      - ev_charger_network
 
   # -----------------------------------------------------
   # 2. FastAPI Application Service
   # -----------------------------------------------------
   api:
-    build: .   # 현재 디렉토리의 Dockerfile 사용
+    build: .
     container_name: ev_charger_api
     restart: always
     command: >
       sh -c "sleep 5 &&
              alembic upgrade head &&
              python init_db.py &&
-             uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
-
-    # ✅ .env 파일 로드 + Docker 환경 표시
+             exec uvicorn app.main:app --host 0.0.0.0 --port 8000"
     env_file:
       - .env
     environment:
-      - DOCKER_ENV=true         # Docker 내부에서 Redis와 DB 호스트 자동 조정
-      - DATABASE_HOST=host.docker.internal  # 로컬 PostgreSQL 접근
-
+      - DOCKER_ENV=true
+      - DATABASE_HOST=host.docker.internal
+      - REDIS_HOST=redis
     ports:
       - "8000:8000"
-
     depends_on:
       redis:
         condition: service_healthy
-
     volumes:
-      - .:/app   # 코드 변경 시 자동 반영 (개발용 마운트)
+      - .:/app
+    networks:
+      - ev_charger_network
+
+  # -----------------------------------------------------
+  # 3. Nginx Reverse Proxy Service
+  # -----------------------------------------------------
+  nginx:
+    image: nginx:alpine
+    container_name: ev_charger_nginx
+    restart: always
+    ports:
+      - "8080:80"
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/.htpasswd:/etc/nginx/.htpasswd
+    depends_on:
+      - api
+    networks:
+      - ev_charger_network
 
 # -----------------------------------------------------
-# Volumes (데이터 영속화)
+# Volumes
 # -----------------------------------------------------
 volumes:
   redis_data:
     driver: local
+
+# -----------------------------------------------------
+# Network
+# -----------------------------------------------------
+networks:
+  ev_charger_network:
+    driver: bridge
