Prepare project for Render deployment

--- a/alembic.ini
+++ b/alembic.ini
@@ -85,8 +85,7 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 # [수정됨] 비동기 드라이버(asyncpg)와 일관된 DB 이름(ev_charger_db) 사용
-sqlalchemy.url = env:DATABASE_URL
-#driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql+asyncpg://postgres:gkfka9116!@host.docker.internal:5432/Codyssey_Team_A
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
