--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ requests = "^2.32.5"
 httpx = "^0.28.1"
 passlib = "^1.7.4"
 python-jose = {extras = ["cryptography"], version = "^3.5.0"}
+python-multipart = "^0.0.20"
 
 [tool.poetry.scripts]
 migrate = "scripts.migrate:main"
