--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ __pycache__/
 # --------------------------
 # 환경 설정 파일
 # --------------------------
-.env
+.env.production
 .env.local
 .env.dev
 .env.test
