--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
              python init_db.py &&
              exec uvicorn app.main:app --host 0.0.0.0 --port 8000"
     env_file:
-      - .env   # .env에서 REDIS_HOST와 DOCKER_ENV 모두 관리
+      - .env.production
     depends_on:
       redis:
         condition: service_healthy
