--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
              python init_db.py &&
              exec uvicorn app.main:app --host 0.0.0.0 --port 8000"
     env_file:
-      - .env.production
+      - .env.development  # Docker Compose 로컬 개발용
     depends_on:
       redis:
         condition: service_healthy
