Fix: remove duplicate router import and references in station_router.py

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,27 @@
+# Example environment variables for local testing and Render
+
+# Database (replace with real values if running DB integration locally)
+DATABASE_URL=postgresql://user:password@localhost:5432/ev_db
+
+# Redis (for local dev you can run redis on localhost)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# Frontend API keys to protect our endpoints (comma separated)
+# Example: FRONTEND_API_KEYS=localtestkey
+FRONTEND_API_KEYS=localtestkey
+
+# External Station API (replace with actual values)
+EXTERNAL_STATION_API_BASE_URL=https://api.example.com
+EXTERNAL_STATION_API_KEY=your_external_api_key_here
+EXTERNAL_STATION_API_AUTH_TYPE=header
+# If auth type is header, set the header name (e.g. Authorization or X-API-KEY)
+EXTERNAL_STATION_API_KEY_HEADER_NAME=Authorization
+EXTERNAL_STATION_API_TIMEOUT_SECONDS=10
+
+# Application environment
+ENVIRONMENT=development
 # Example environment variables (do NOT store secrets in repo)
 DATABASE_URL=postgresql+asyncpg://<user>:<password>@<host>:5432/<dbname>
 REDIS_HOST=localhost
