--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ python-multipart = "^0.0.20"
 [tool.poetry.scripts]
 migrate = "scripts.migrate:main"
 
+[tool.poetry.dev-dependencies]
+locust = "^2.20.0"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
